--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ img {
 }
 
 #footer h6 {
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-family: Verdana, Arial;
 }
 
 th {
