--- a/style.css
+++ b/style.css
@@ -3,8 +3,16 @@
     background-color: #ff00f2;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 700px) {
     header {
+        height: 10%;
+        background-color: deeppink;
+        background-size: 10%;
+    }
+    th {
+        background-color: deeppink;
+    }
+    td {
         background-color: deeppink;
     }
 }
