--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@
     }
 }
 img {
-    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 60%;
+    height: auto;
+    border-radius: 10px;
 }
 
 .row {
